<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory>
        <Preference
            android:icon="@drawable/ic_sag"
            android:key="prefs_about_version"
            android:selectable="false"
            android:title="SAG Cards powered by Nimple">
            <include layout="@layout/about_text"/>
        </Preference>
        <Preference android:title="@string/about_faq" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_faq" />
        </Preference>
        <Preference android:title="@string/about_disclaimer" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_disclaimer" />
        </Preference>
        <Preference android:title="@string/about_terms" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_terms" />
        </Preference>
        <Preference android:title="@string/about_imprint" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_imprint" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/social_title" >
        <Preference android:title="@string/about_facebook" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_facebook" />
        </Preference>
        <Preference android:title="@string/about_twitter" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url_twitter" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>