<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_action_share_code"
        android:showAsAction="always"
        android:title="@string/ab_share_code" />
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add_person"
        android:showAsAction="always"
        android:title="@string/ab_add" />
    <item
        android:id="@+id/menu_save"
        android:showAsAction="never"
        android:title="@string/ab_export_code" />
    <item
        android:id="@+id/menu_share"
        android:showAsAction="never"
        android:title="@string/ab_share" />
    <item
        android:id="@+id/menu_feedback"
        android:showAsAction="never"
        android:title="@string/ab_feedback" />
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/ab_about" />

</menu>